--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@ body {
 
 .form-signup {
   max-width: 500px;
-  padding: 15px;
+  padding: 10px;
   
 }
 
@@ -22,15 +22,26 @@ body {
   box-shadow: -5px 5px 5px rgba(49, 43, 6, 0.3);
   border-radius: 20px;
   padding: 2px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .form-signup h1{
+ 
   height: 50px;
   width: auto;
   font-size: 40px;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-shadow: -5px 5px 3px rgba(49, 43, 6, 0.3);
   
+}
+@media (max-width: 600px) {
+  .form-signup h1{
+    font-size: 35px;
+  }
+}
+@media (max-width: 435px) {
+  .form-signup h1{
+    font-size: 30px;
+  }
 }
 .first{
     box-shadow: -5px 5px 5px rgba(49, 43, 6, 0.3);
